[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/Exit.png" type="Texture" id=1]
[ext_resource path="res://src/ui/TopButton.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/Chonk.wav" type="AudioStream" id=3]

[node name="Exit" type="TextureButton"]
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickSound" type="AudioStreamPlayer" parent="."]

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="mouse_entered" from="." to="." method="_on_icon_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_icon_mouse_exited"]
